terminé. modification menu alignement en ecran large. correction mineur des margin.

--- a/sass/composants/_container.scss
+++ b/sass/composants/_container.scss
@@ -26,6 +26,9 @@
 
   &--menu {
     width: 100%;
+    margin-top: 10px;
+    margin-bottom: 0;
+    align-items: flex-start;
   }
 
   &--fade-anim {
@@ -50,7 +53,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin-top: 52px;
+    margin-top: 50px;
     margin-bottom: 0;
     padding-bottom: 72px;
   }
