--- a/sass/layout/_comp-menu.scss
+++ b/sass/layout/_comp-menu.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin-top: 30px;
-  margin-bottom: 45px;
+  margin-bottom: -10px;
 
   &__heading {
     font-weight: normal;
