--- a/sass/layout/_main-menu.scss
+++ b/sass/layout/_main-menu.scss
@@ -72,7 +72,7 @@
     & i {
       font-size: 2.3rem;
       margin-top: -4px;
-      margin-right: 19px;
+      margin-right: 6px;
       color: transparent;
       background: linear-gradient(0deg, $color-secondary, 60%, $color-primary);
       background-clip: text;
